@startuml

FeatureModel *--> "1" root

Feature <|-- root
Feature *-- "0..*" Feature : subFeatures

class Feature {
name: string
}

Feature <|-- OrFeature
OrFeature <|-- XorFeature

class Cardinality {
min: int
max: int
}

Cardinality <|-- Group\nCardinality
Cardinality <|-- Feature\nCardinality

class Attribute {
name: string
value: string
}

Feature *--> "0..*" Attribute: attributes
Feature *--> "1" Feature\nCardinality
OrFeature *--> "2..*" Feature : variants
OrFeature --> Group\nCardinality

FeatureModel *--> "0..*" Constraint

Constraint <|-- Boolean\nConstraint
Boolean\nConstraint --> "1" Feature : from
Boolean\nConstraint --> "1" Feature : to
Boolean\nConstraint <|-- Implies
Boolean\nConstraint <|-- Excludes
Constraint <|-- CardExConstraint

CardExConstraint *--> "1" Operation : Action
CardExConstraint *--> "1..*" Operation : Condition

class Operation {
value: int
}

CardExConstraint *--> Operator
Operator <|-- And
Operator <|-- Or
Operation --> Feature

@enduml